Fix content-header-jumbotron extra padding-bottom

--- a/source/css/scss/_content-header.scss
+++ b/source/css/scss/_content-header.scss
@@ -148,6 +148,7 @@
   // Variant for jumbotron style content-header
   &.content-header-jumbotron {
     padding-top: 0;
+    padding-bottom: 0;
     .content-header-wrapper {
       height: 100%;
       padding: 2rem;
